Delete Global variables, and reset function, replace with form event, add icon and change title

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" type="text/css" href="css/idea-cards.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:400,700" rel="stylesheet">
-  <title>Idea Box</title>
+  <link rel="icon" href="images/ic_view_list_black_24dp_1x.png">
+  <title>2do Box</title>
 </head>
 <body>
   <section class="section__main">
     <header>
-      <h1>idea<span>box</span></h1>
+      <h1>2Do<span>box</span></h1>
     </header>
     <article>
       <form>
