Sort completed tasks, Add show all and show completed tasks button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
              aria-label="Input field for the body of your idea">
       <input type="submit" name="save" class="todo-form__button-save form-input" value="save" role="button"
              aria-label="Submit button to store your ideas" disabled>
-      <p> Completed tasks!</p>
     </form>
   </article>
 </main>
@@ -33,6 +32,7 @@
   <article class="todo-list__search">
     <input type="text" name="search" class="todo-list__search-field" placeholder="Filter"
            aria-label="Search field to search through your ideas">
+    <p class = "completedTask">Show completed tasks</p> 
   </article>
   <section class="todo-list__ideas" aria-live="polite"></section>
 </section>
