Added flags for importance

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:400,700" rel="stylesheet">
   <link rel="icon" href="img/ic_view_list_black_24dp_1x.png">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <title>2do Box</title>
 </head>
 <body>
@@ -32,7 +33,7 @@
   <article class="todo-list__search">
     <input type="text" name="search" class="todo-list__search-field" placeholder="Filter"
            aria-label="Search field to search through your ideas">
-    <p class = "completedTask">Show completed tasks</p> 
+    <p class="completedTask">Show completed tasks</p>
   </article>
   <section class="todo-list__ideas" aria-live="polite"></section>
 </section>
