Add flags for sorting

--- a/index.html
+++ b/index.html
@@ -33,9 +33,24 @@
   <article class="todo-list__search">
     <input type="text" name="search" class="todo-list__search-field" placeholder="Filter"
            aria-label="Search field to search through your ideas">
+  <section class = "topMenu">
     <p class="completedTask">Show completed tasks</p>
+    <article>
+      <button class="0 none" title="None" type="button"><i class="far fa-flag"></i></i>
+          </button>
+              <button class="1 low" type="button"><i class="fas fa-flag"></i>
+          </button>
+              <button class="2 normal" type="button"><i class="fas fa-flag"></i>
+          </button>
+              <button class="3 high" type="button"><i class="fas fa-flag"></i>
+          </button>
+              <button class="4 critical" type="button"><i class="fas fa-flag"></i>
+          </button>
+    </article>
+  </section>
   </article>
   <section class="todo-list__ideas" aria-live="polite"></section>
+  <a class="btn btn-small btn-blue" href="#">Show All TODOS</a>
 </section>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
