Sort by level of importance

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
            aria-label="Search field to search through your ideas">
   <section class = "topMenu">
     <p class="completedTask">Show completed tasks</p>
-    <article>
-      <button class="0 none" title="None" type="button"><i class="far fa-flag"></i></i>
+    <article class="btns">
+      <button class="0 none sortNone" title="None" type="button"><i class="far fa-flag"></i></i>
           </button>
-              <button class="1 low" type="button"><i class="fas fa-flag"></i>
+              <button class="1 low sortLow" type="button"><i class="fas fa-flag"></i>
           </button>
-              <button class="2 normal" type="button"><i class="fas fa-flag"></i>
+              <button class="2 normal sortNormal" type="button"><i class="fas fa-flag"></i>
           </button>
-              <button class="3 high" type="button"><i class="fas fa-flag"></i>
+              <button class="3 high sortHigh" type="button"><i class="fas fa-flag"></i>
           </button>
-              <button class="4 critical" type="button"><i class="fas fa-flag"></i>
+              <button class="4 critical sortCritical" type="button"><i class="fas fa-flag"></i>
           </button>
     </article>
   </section>
