--- a/index.html
+++ b/index.html
@@ -36,16 +36,11 @@
   <section class = "topMenu">
     <p class="completedTask">Show completed tasks</p>
     <article class="btns">
-      <button class="0 none sortNone" title="None" type="button"><i class="far fa-flag"></i></i>
-          </button>
-              <button class="1 low sortLow" type="button"><i class="fas fa-flag"></i>
-          </button>
-              <button class="2 normal sortNormal" type="button"><i class="fas fa-flag"></i>
-          </button>
-              <button class="3 high sortHigh" type="button"><i class="fas fa-flag"></i>
-          </button>
-              <button class="4 critical sortCritical" type="button"><i class="fas fa-flag"></i>
-          </button>
+      <button class="0 none sortNone" title="None" type="button"><i class="far fa-flag"></i></i></button>
+      <button class="1 low sortLow" type="button"><i class="fas fa-flag"></i></button>
+      <button class="2 normal sortNormal" type="button"><i class="fas fa-flag"></i></button>
+      <button class="3 high sortHigh" type="button"><i class="fas fa-flag"></i></button>
+      <button class="4 critical sortCritical" type="button"><i class="fas fa-flag"></i></button>
     </article>
   </section>
   </article>
